--- a/nusagg.html
+++ b/nusagg.html
@@ -210,7 +210,7 @@ p {
           "@type": "ListItem",
           "position": 1,
           "name": "Beranda",
-          "item": "https://pg-soft-mahjong-ways2.github.io/Mahjong Ways/index.html"
+          "item": "https://pgsoftmahjong-nusa.github.io/nusagg/nusagg.html/"
         },
         {
           "@type": "ListItem",
