--- a/nusagg.html
+++ b/nusagg.html
@@ -45,6 +45,7 @@
     <meta name="twitter:image" content="https://nusaspaceman.com/asset/mahjong-ways-banner.png">
     <meta name="twitter:image:alt" content="https://nusaspaceman.com/asset/mahjong-ways-banner.png">
     <meta name="twitter:site" content="@Mahjong Ways">
+    <meta name="google-site-verification" content="wg5zkG_oauNuogX9IdMm0BE_r3SS9knfSsnc34dvQ6Y" />
     <meta name="twitter:creator" content="@Mahjong Ways_team">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
